Ho completato il secondo punto

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <script id="studente" type="text/x-handlebars-template">
       <div class="datiStudente">
-        <h2>{{nome}}</h2>
-        <h2>{{cognome}}</h2>
-        <h2>{{eta}}</h2>
+        <h2>Nome: {{nome}}</h2>
+        <h2>Cognome: {{cognome}}</h2>
+        <h2>Et&agrave;: {{eta}}</h2>
       </div>
     </script>
 
