Ho completato il terzo punto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   </head>
   <body>
 
-    <div class="container"></div>
+    <div class="container">
+      <div class="inserisci">
+        <h1>Inserisci uno studente</h1>
+        <button id="inserimento" type="button" name="button">Inserisci</button>
+      </div>
+    </div>
 
     <script id="studente" type="text/x-handlebars-template">
       <div class="datiStudente">
