Ho aggiunto Handlebars con l'aggiornamento della lista studenti

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
         <h1>Inserisci uno studente</h1>
         <button id="inserimento" type="button" name="button">Inserisci</button>
       </div>
+
+      <div class="listaStudenti"></div>
     </div>
 
     <script id="studente" type="text/x-handlebars-template">
       <div class="datiStudente">
+        <br>
         <h2>Nome: {{nome}}</h2>
         <h2>Cognome: {{cognome}}</h2>
         <h2>Et&agrave;: {{eta}}</h2>
       </div>
     </script>
 
-
+    <script type="text/javascript" src="js/function.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 
   </body>
